<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.stressfreeroads.gradproject.ProfileManager">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Provide_Preference"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/question_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Q1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Question"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ansBtn1"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button_background"
            android:text="@string/choice1" />

        <RadioButton
            android:id="@+id/ansBtn2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_button_background"
            android:text="@string/choice2" />

        <RadioButton
            android:id="@+id/ansBtn3"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_button_background"
            android:text="@string/choice3" />

        <RadioButton
            android:id="@+id/ansBtn4"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_button_background"
            android:text="@string/choice4" />

        <RadioButton
            android:id="@+id/ansBtn5"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_button_background"
            android:text="@string/choice5" />

    </RadioGroup>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp"
        android:onClick="showNextQuestion"
        android:background="@drawable/navigationbutton"
        android:textColor="#FFF"
        android:text="@string/next_ques"
        android:paddingBottom="2dp"
        android:textAlignment="center"/>

</LinearLayout>
