<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:keepScreenOn="true"
tools:context="com.stressfreeroads.gradproject.MapHomePage">

<fragment
    android:id="@+id/mapfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    class="com.here.android.mpa.mapping.MapFragment" />

    <LinearLayout
        android:id="@+id/settingsPanelLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/dim_foreground_disabled_material_light"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/schemes"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:paddingTop="@dimen/abc_action_bar_subtitle_bottom_margin_material"
            android:text="MAP SCHEMES"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffcfc"/>

        <RadioGroup
            android:id="@+id/mapModeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="horizontal"
            android:paddingTop="1dp">

            <RadioButton
                android:id="@+id/mapModeBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/generic_button_bar_i"
                android:button="@null"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/NormalMode"/>

            <RadioButton
                android:id="@+id/hybridModeBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/generic_button_bar_i"
                android:button="@null"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/HybridMode"/>

            <RadioButton
                android:id="@+id/terrainModeBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_above="@+id/getLocationButton"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="73dp"
                android:layout_marginEnd="110dp"
                android:layout_weight="1"
                android:background="@drawable/generic_button_bar_i"
                android:button="@null"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/TerrainMode" />
        </RadioGroup>

        <!--<TextView-->
            <!--android:id="@+id/textView"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="35dp"-->
            <!--android:paddingTop="@dimen/abc_action_bar_subtitle_bottom_margin_material"-->
            <!--android:text="TRAFFIC LAYER ATTRIBUTES"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:textColor="#fffcfc"/>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical"-->
            <!--android:padding="@dimen/abc_dropdownitem_text_padding_left">-->

            <!--&lt;!&ndash;<Switch&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/flowSwitch"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="fill_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="35dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/Flow"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textColor="#fffcfc"/>&ndash;&gt;-->

            <!--&lt;!&ndash;<Switch&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/incidentSwitch"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="fill_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="35dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/Incident"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textColor="#fffcfc"/>&ndash;&gt;-->

        <!--</LinearLayout>-->

    </LinearLayout>

    <ImageButton
        android:id="@+id/settingButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/getLocationButton"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom"
        android:layout_marginEnd="18dp"
        android:background="@drawable/settingbutton"
        android:gravity="center"
        android:src="@mipmap/settings" />


    <ImageButton
    android:id="@+id/getLocationButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
    android:layout_marginBottom="40dp"
    android:src="@drawable/getlocation"

    />

    <Button
        android:id="@+id/startNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="40dp"
        android:text="Start Navigation"
        android:background="#008000"
        android:textColor="#FFF"
        />

    <TextView
        android:id="@+id/distance_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:visibility="gone" />

</RelativeLayout>